# convolution_performance

./: .gitignore  LICENSE  README.md
compare/: .Main.hs.swp  CHANGELOG.md  Main.hs  compare.cabal
compare/app/: Main.hs
compare/cbits/: im2col.c  im2col.h
